--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 
 body {
     font-family: Arial, sans-serif;
-    /* font-size: 24px; */
+    font-size: 24px;
     background-color: #fff;
     color: #000;
 }
@@ -66,4 +66,23 @@ button {
     cursor: pointer;
     border-radius: 20px;
     margin-top: 30px;
+}
+
+section {
+    width: 95%;
+    margin: 10px auto;
+}
+
+h2 {
+    font-weight: lighter;
+}
+
+ul {
+    list-style-type: disc;
+    padding-left: 0;
+    margin: 2%;
+}
+
+li {
+    margin: 10px 0;
 }
